--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Categories#edit</h1>
-<p>Find me in app/views/categories/edit.html.erb</p>
+<% provide(:title, "Edit Category") %>
+
+<section class="container">
+  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h4 align="center">Edit Category</h4>
+          <hr>
+					  <%= form_for @category do |f| %>					   
+						  <%= f.label :name %>
+						  <%= f.text_field :name, class: 'form-control' %>
+						 <%= f.submit "Update Category", class: "btn btn-success" %>
+						<% end %>
+       </div>
+    </div>
+  </div>
+</section>
